Add gpu utilization metering
