# api/ac-openapi-spec/swagger.json
@@ -435,6 +435,260 @@
         }
       }
     },
+    "/kapis/metering.kubesphere.io/v1alpha1/gpu/workspaces/{workspace}": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Workspace Meters"
+        ],
+        "summary": "Get workspace-level meter data of a specific workspace.",
+        "operationId": "HandleWorkspaceMeterQueryGPU",
+        "parameters": [
+          {
+            "type": "string",
+            "default": "query",
+            "description": "Metering operation.",
+            "name": "operation",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Workspace name.",
+            "name": "workspace",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "The metric name filter consists of a regexp pattern. It specifies which metric data to return. For example, the following filter matches both workspace CPU usage and memory usage: `meter_workspace_cpu_usage|meter_workspace_memory_usage`.",
+            "name": "metrics_filter",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "The name of the storageclass.",
+            "name": "storageclass",
+            "in": "path"
+          },
+          {
+            "type": "string",
+            "description": "The PVC filter consists of a regexp pattern. It specifies which PVC data to return.",
+            "name": "pvc_filter",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Start time of query. Use **start** and **end** to retrieve metric data over a time span. It is a string with Unix time format, eg. 1559347200. ",
+            "name": "start",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "End time of query. Use **start** and **end** to retrieve metric data over a time span. It is a string with Unix time format, eg. 1561939200. ",
+            "name": "end",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "default": "10m",
+            "description": "Time interval. Retrieve metric data at a fixed interval within the time range of start and end. It requires both **start** and **end** are provided. The format is [0-9]+[smhdwy]. Defaults to 10m (i.e. 10 min).",
+            "name": "step",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "A timestamp in Unix time format. Retrieve metric data at a single point in time. Defaults to now. Time and the combination of start, end, step are mutually exclusive.",
+            "name": "time",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Additional operations. Currently available types is statistics. It retrieves the total number of namespaces, devops projects, members and roles in this workspace at the moment.",
+            "name": "type",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/monitoring.GPUMetrics"
+            }
+          }
+        }
+      }
+    },
+    "/kapis/tenant.kubesphere.io/v1alpha2/gpu/metering": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Workspace Meters"
+        ],
+        "summary": "Get meterings against the cluster.",
+        "operationId": "QueryMeteringGPU",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "Metering level.",
+            "name": "level",
+            "in": "query",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "Node name.",
+            "name": "node",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Workspace name.",
+            "name": "workspace",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Namespace name.",
+            "name": "namespace",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Workload kind. One of deployment, daemonset, statefulset.",
+            "name": "kind",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Workload name.",
+            "name": "workload",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Pod name.",
+            "name": "pod",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Appliction names, format app_name[:app_version](such as nginx:v1, nignx) which are joined by \"|\" ",
+            "name": "applications",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Services which are joined by \"|\".",
+            "name": "services",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "The metric name filter consists of a regexp pattern. It specifies which metric data to return. For example, the following filter matches both workspace CPU usage and memory usage: `meter_workspace_cpu_usage|meter_workspace_memory_usage`.",
+            "name": "metrics_filter",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "The workspace filter consists of a regexp pattern. It specifies which workspace data to return.",
+            "name": "resources_filter",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Start time of query. Use **start** and **end** to retrieve metric data over a time span. It is a string with Unix time format, eg. 1559347200. ",
+            "name": "start",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "End time of query. Use **start** and **end** to retrieve metric data over a time span. It is a string with Unix time format, eg. 1561939200. ",
+            "name": "end",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "default": "10m",
+            "description": "Time interval. Retrieve metric data at a fixed interval within the time range of start and end. It requires both **start** and **end** are provided. The format is [0-9]+[smhdwy]. Defaults to 10m (i.e. 10 min).",
+            "name": "step",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "A timestamp in Unix time format. Retrieve metric data at a single point in time. Defaults to now. Time and the combination of start, end, step are mutually exclusive.",
+            "name": "time",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "Sort workspaces by the specified metric. Not applicable if **start** and **end** are provided.",
+            "name": "sort_metric",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "default": "desc.",
+            "description": "Sort order. One of asc, desc.",
+            "name": "sort_type",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "description": "The page number. This field paginates result data of each metric, then returns a specific page. For example, setting **page** to 2 returns the second page. It only applies to sorted metric data.",
+            "name": "page",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "default": 5,
+            "description": "Page size, the maximum number of results in a single page. Defaults to 5.",
+            "name": "limit",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "The name of the storageclass.",
+            "name": "storageclass",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "The PVC filter consists of a regexp pattern. It specifies which PVC data to return.",
+            "name": "pvc_filter",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/monitoring.GPUMetrics"
+            }
+          }
+        }
+      }
+    },
+    "/kapis/tenant.kubesphere.io/v1alpha2/gpu/metering/price": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "summary": "Get resoure price.",
+        "operationId": "HandlePriceInfoQuery",
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/metering.PriceInfo"
+            }
+          }
+        }
+      }
+    },
     "/kapis/virtualization.ecpaas.io/v1/disks": {
       "get": {
         "produces": [
@@ -1570,6 +1824,206 @@
         "message": {
           "description": "error message",
           "type": "string"
+        }
+      }
+    },
+    "metering.PriceInfo": {
+      "required": [
+        "currency"
+      ],
+      "properties": {
+        "cpu_per_core_per_hour": {
+          "description": "cpu price",
+          "type": "number",
+          "format": "double"
+        },
+        "currency": {
+          "description": "currency",
+          "type": "string"
+        },
+        "egress_network_traffic_per_megabytes_per_hour": {
+          "description": "egress price",
+          "type": "number",
+          "format": "double"
+        },
+        "gpu_per_percentage_per_hour": {
+          "description": "gpu price",
+          "type": "number",
+          "format": "double"
+        },
+        "ingress_network_traffic_per_megabytes_per_hour": {
+          "description": "ingress price",
+          "type": "number",
+          "format": "double"
+        },
+        "mem_per_gigabytes_per_hour": {
+          "description": "mem price",
+          "type": "number",
+          "format": "double"
+        },
+        "pvc_per_gigabytes_per_hour": {
+          "description": "pvc price",
+          "type": "number",
+          "format": "double"
+        }
+      }
+    },
+    "monitoring.GPUExportPoint": {
+      "required": [
+        "Timestamp",
+        "Value"
+      ],
+      "properties": {
+        "Timestamp": {
+          "type": "number",
+          "format": "double"
+        },
+        "Value": {
+          "type": "number",
+          "format": "double"
+        }
+      }
+    },
+    "monitoring.GPUMetric": {
+      "properties": {
+        "data": {
+          "description": "actual metric result",
+          "$ref": "#/definitions/monitoring.GPUMetricData"
+        },
+        "error": {
+          "type": "string"
+        },
+        "metric_name": {
+          "description": "metric name, eg. scheduler_up_sum",
+          "type": "string"
+        }
+      }
+    },
+    "monitoring.GPUMetricData": {
+      "properties": {
+        "result": {
+          "description": "metric data including labels, time series and values",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/monitoring.GPUMetricValue"
+          }
+        },
+        "resultType": {
+          "description": "result type, one of matrix, vector",
+          "type": "string"
+        }
+      }
+    },
+    "monitoring.GPUMetricValue": {
+      "required": [
+        "min_value",
+        "max_value",
+        "avg_value",
+        "sum_value",
+        "fee",
+        "resource_unit",
+        "currency_unit"
+      ],
+      "properties": {
+        "avg_value": {
+          "description": "average value from monitor points",
+          "type": "string"
+        },
+        "currency_unit": {
+          "type": "string"
+        },
+        "exported_value": {
+          "description": "exported time series, values of vector type",
+          "$ref": "#/definitions/monitoring.GPUExportPoint"
+        },
+        "exported_values": {
+          "description": "exported time series, values of matrix type",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/monitoring.GPUExportPoint"
+          }
+        },
+        "fee": {
+          "description": "resource fee",
+          "type": "string"
+        },
+        "max_value": {
+          "description": "maximum value from monitor points",
+          "type": "string"
+        },
+        "metric": {
+          "description": "time series labels",
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        },
+        "min_value": {
+          "description": "minimum value from monitor points",
+          "type": "string"
+        },
+        "resource_unit": {
+          "type": "string"
+        },
+        "sum_value": {
+          "description": "sum value from monitor points",
+          "type": "string"
+        },
+        "value": {
+          "description": "time series, values of vector type",
+          "$ref": "#/definitions/monitoring.GPUPoint"
+        },
+        "values": {
+          "description": "time series, values of matrix type",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/monitoring.GPUPoint"
+          }
+        }
+      }
+    },
+    "monitoring.GPUMetrics": {
+      "required": [
+        "results"
+      ],
+      "properties": {
+        "page": {
+          "description": "current page returned",
+          "type": "integer",
+          "format": "int32"
+        },
+        "results": {
+          "description": "actual array of results",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/monitoring.GPUMetric"
+          }
+        },
+        "total_item": {
+          "description": "page size",
+          "type": "integer",
+          "format": "int32"
+        },
+        "total_page": {
+          "description": "total number of pages",
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "monitoring.GPUPoint": {
+      "required": [
+        "Timestamp",
+        "Value"
+      ],
+      "properties": {
+        "Timestamp": {
+          "type": "number",
+          "format": "double"
+        },
+        "Value": {
+          "type": "number",
+          "format": "double"
         }
       }
     },
