# pkg/models/metering/type.go
@@ -4,14 +4,13 @@
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
 //
-//     http://www.apache.org/licenses/LICENSE-2.0
+//	http://www.apache.org/licenses/LICENSE-2.0
 //
 // Unless required by applicable law or agreed to in writing, software
 // distributed under the License is distributed on an "AS IS" BASIS,
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
-//
 package metering
 
 type PriceInfo struct {
@@ -27,6 +26,8 @@ type PriceInfo struct {
 	EgressNetworkTrafficPerMegabytesPerHour float64 `json:"egress_network_traffic_per_megabytes_per_hour,omitempty" description:"egress price"`
 	// pvc cost with above currency unit for per GB per hour
 	PvcPerGigabytesPerHour float64 `json:"pvc_per_gigabytes_per_hour,omitempty" description:"pvc price"`
+	// gpu cost with above currency unit for per percentage per hour
+	GpuPerPercentagePerHour float64 `json:"gpu_per_percentage_per_hour,omitempty" description:"gpu price"`
 }
 
 type PriceResponse struct {
