# pkg/models/monitoring/gpu_types.go
@@ -1,0 +1,36 @@
+/*
+Copyright 2020 KubeSphere Authors
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
+package monitoring
+
+import (
+	"kubesphere.io/kubesphere/pkg/simple/client/monitoring"
+)
+
+type GPUMetrics struct {
+	Results     []monitoring.GPUMetric `json:"results" description:"actual array of results"`
+	CurrentPage int                    `json:"page,omitempty" description:"current page returned"`
+	TotalPages  int                    `json:"total_page,omitempty" description:"total number of pages"`
+	TotalItems  int                    `json:"total_item,omitempty" description:"page size"`
+}
+
+type GPUMetadata struct {
+	Data []monitoring.Metadata `json:"data" description:"actual array of results"`
+}
+
+type GPUMetricLabelSet struct {
+	Data []map[string]string `json:"data" description:"actual array of results"`
+}
