# pkg/models/tenant/metering.go
@@ -4,14 +4,13 @@
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
 //
-//     http://www.apache.org/licenses/LICENSE-2.0
+//	http://www.apache.org/licenses/LICENSE-2.0
 //
 // Unless required by applicable law or agreed to in writing, software
 // distributed under the License is distributed on an "AS IS" BASIS,
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
-//
 package tenant
 
 import (
@@ -624,7 +623,60 @@ func (t *tenantOperator) ProcessNamedMetersQuery(q QueryOptions, priceInfo meter
 	return
 }
 
+func (t *tenantOperator) ProcessNamedMetersQueryGPU(q QueryOptions, priceInfo meteringclient.PriceInfo) (metrics monitoringmodel.GPUMetrics, err error) {
+	var meters []string
+	for _, meter := range q.NamedMetrics {
+		if !strings.HasPrefix(meter, monitoringmodel.MetricMeterPrefix) {
+			// skip non-meter metric
+			continue
+		}
+
+		ok, _ := regexp.MatchString(q.MetricFilter, meter)
+		if ok {
+			meters = append(meters, meter)
+		}
+	}
+
+	if len(meters) == 0 {
+		klog.Info("no meters found")
+		return
+	}
+
+	_, ok := q.Option.(monitoring.ApplicationsOption)
+	if ok {
+		metrics, err = t.processApplicationMetersQueryGPU(meters, q, priceInfo)
+		return
+	}
+
+	_, ok = q.Option.(monitoring.ServicesOption)
+	if ok {
+		metrics, err = t.processServiceMetersQueryGPU(meters, q, priceInfo)
+		return
+	}
+
+	if q.isRangeQuery() {
+		metrics, err = t.mo.GetNamedMetersOverTimeGPU(meters, q.Start, q.End, q.Step, q.Option, priceInfo)
+	} else {
+		metrics, err = t.mo.GetNamedMetersGPU(meters, q.Time, q.Option, priceInfo)
+		if q.shouldSort() {
+			metrics = *metrics.SortGPU(q.Target, q.Order, q.Identifier).PageGPU(q.Page, q.Limit)
+		}
+	}
+
+	return
+}
+
 func getMetricPosMap(metrics []monitoring.Metric) map[string]int {
+	var metricMap = make(map[string]int)
+
+	for i, m := range metrics {
+		metricMap[m.MetricName] = i
+	}
+
+	return metricMap
+}
+
+func getMetricPosMapGPU(metrics []monitoring.GPUMetric) map[string]int {
 	var metricMap = make(map[string]int)
 
 	for i, m := range metrics {
@@ -682,6 +734,54 @@ func (t *tenantOperator) processApplicationMetersQuery(meters []string, q QueryO
 	return
 }
 
+func (t *tenantOperator) processApplicationMetersQueryGPU(meters []string, q QueryOptions, priceInfo meteringclient.PriceInfo) (res monitoringmodel.GPUMetrics, err error) {
+	var metricMap = make(map[string]int)
+	var current_res monitoringmodel.GPUMetrics
+
+	aso, ok := q.Option.(monitoring.ApplicationsOption)
+	if !ok {
+		err = errors.New("invalid application option")
+		klog.Error(err.Error())
+		return
+	}
+	componentsMap := t.mo.GetAppWorkloads(aso.NamespaceName, aso.Applications)
+
+	for k := range componentsMap {
+		opt := monitoring.ApplicationOption{
+			NamespaceName:         aso.NamespaceName,
+			Application:           k,
+			ApplicationComponents: componentsMap[k],
+			StorageClassName:      aso.StorageClassName,
+		}
+
+		if q.isRangeQuery() {
+			current_res, err = t.mo.GetNamedMetersOverTimeGPU(meters, q.Start, q.End, q.Step, opt, priceInfo)
+		} else {
+			current_res, err = t.mo.GetNamedMetersGPU(meters, q.Time, opt, priceInfo)
+		}
+
+		if res.Results == nil {
+			res = current_res
+			metricMap = getMetricPosMapGPU(res.Results)
+		} else {
+			for _, cur_res := range current_res.Results {
+				pos, ok := metricMap[cur_res.MetricName]
+				if ok {
+					res.Results[pos].GPUMetricValues = append(res.Results[pos].GPUMetricValues, cur_res.GPUMetricValues...)
+				} else {
+					res.Results = append(res.Results, cur_res)
+				}
+			}
+		}
+	}
+
+	if !q.isRangeQuery() && q.shouldSort() {
+		res = *res.SortGPU(q.Target, q.Order, q.Identifier).PageGPU(q.Page, q.Limit)
+	}
+
+	return
+}
+
 func (t *tenantOperator) processServiceMetersQuery(meters []string, q QueryOptions, priceInfo meteringclient.PriceInfo) (res monitoringmodel.Metrics, err error) {
 	var metricMap = make(map[string]int)
 	var current_res monitoringmodel.Metrics
@@ -724,6 +824,53 @@ func (t *tenantOperator) processServiceMetersQuery(meters []string, q QueryOptio
 
 	if !q.isRangeQuery() && q.shouldSort() {
 		res = *res.Sort(q.Target, q.Order, q.Identifier).Page(q.Page, q.Limit)
+	}
+
+	return
+}
+
+func (t *tenantOperator) processServiceMetersQueryGPU(meters []string, q QueryOptions, priceInfo meteringclient.PriceInfo) (res monitoringmodel.GPUMetrics, err error) {
+	var metricMap = make(map[string]int)
+	var current_res monitoringmodel.GPUMetrics
+
+	sso, ok := q.Option.(monitoring.ServicesOption)
+	if !ok {
+		err = errors.New("invalid service option")
+		klog.Error(err.Error())
+		return
+	}
+	svcPodsMap := t.mo.GetSerivePodsMap(sso.NamespaceName, sso.Services)
+
+	for k := range svcPodsMap {
+		opt := monitoring.ServiceOption{
+			NamespaceName: sso.NamespaceName,
+			ServiceName:   k,
+			PodNames:      svcPodsMap[k],
+		}
+
+		if q.isRangeQuery() {
+			current_res, err = t.mo.GetNamedMetersOverTimeGPU(meters, q.Start, q.End, q.Step, opt, priceInfo)
+		} else {
+			current_res, err = t.mo.GetNamedMetersGPU(meters, q.Time, opt, priceInfo)
+		}
+
+		if res.Results == nil {
+			res = current_res
+			metricMap = getMetricPosMapGPU(res.Results)
+		} else {
+			for _, cur_res := range current_res.Results {
+				pos, ok := metricMap[cur_res.MetricName]
+				if ok {
+					res.Results[pos].GPUMetricValues = append(res.Results[pos].GPUMetricValues, cur_res.GPUMetricValues...)
+				} else {
+					res.Results = append(res.Results, cur_res)
+				}
+			}
+		}
+	}
+
+	if !q.isRangeQuery() && q.shouldSort() {
+		res = *res.SortGPU(q.Target, q.Order, q.Identifier).PageGPU(q.Page, q.Limit)
 	}
 
 	return
@@ -872,9 +1019,9 @@ func (t *tenantOperator) updateDeploysStats(user user.Info, cluster, ns string, 
 }
 
 // updateDaemonsetsStats will update daemonsets field in resource stats struct with pod stats data and daemonsets will be classified into 3 classes:
-// 	1. openpitrix daemonsets
-// 	2. app daemonsets
-// 	3. k8s daemonsets
+//  1. openpitrix daemonsets
+//  2. app daemonsets
+//  3. k8s daemonsets
 func (t *tenantOperator) updateDaemonsetsStats(user user.Info, cluster, ns string, podsStats metering.PodsStats, resourceStats *metering.ResourceStatistic) error {
 	daemonsetList, err := t.listDaemonsets(user, ns)
 	if err != nil {
@@ -1020,9 +1167,9 @@ func (t *tenantOperator) isAppComponent(ns, kind, componentName string) (bool, s
 }
 
 // updateStatefulsetsStats will update statefulsets field in resource stats struct with pod stats data and statefulsets will be classified into 3 classes:
-// 	1. openpitrix statefulsets
-// 	2. app statefulsets
-// 	3. k8s statefulsets
+//  1. openpitrix statefulsets
+//  2. app statefulsets
+//  3. k8s statefulsets
 func (t *tenantOperator) updateStatefulsetsStats(user user.Info, cluster, ns string, podsStats metering.PodsStats, resourceStats *metering.ResourceStatistic) error {
 	statefulsetsList, err := t.listStatefulsets(user, ns)
 	if err != nil {
